--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,14 @@
-﻿aiohttp
-aiosignal
-altair
-annotated-types
-async-timeout
-attrs
-blinker
-cachetools
-certifi
-charset-normalizer
-click
-colorama
-dataclasses-json
-faiss-cpu
-filelock
-frozenlist
-fsspec
-gitdb
-GitPython
-greenlet
-huggingface-hub
-idna
-intel-openmp
-Jinja2
-joblib
-jsonpatch
-jsonpointer
-jsonschema
-jsonschema-specifications
-langchain
-langchain-community
-langchain-core
-langchain-text-splitters
-langsmith
-lxml
-markdown-it-py
-MarkupSafe
-marshmallow
-mdurl
-mkl         202
-mpmath
-multidict
-mypy-extensions
-networkx
-numpy
-orjson
-packaging
-pandas
-pillow
-protobuf
-pyarrow
-pydantic
-pydantic_core
-pydeck
-Pygments
-PyPDF2
-python-dateutil
-python-docx
-python-dotenv
-pytz
-PyYAML
-referencing
-regex
-requests
-rich
-rpds-py
-safetensors
-scikit-learn
-scipy
-sentence-transformers
-six         
-smmap
-SQLAlchemy
+dotenv
 streamlit
-streamlit-chat
-sympy
-tbb         
-tenacity
-threadpoolctl
-tokenizers
-toml
-toolz
-torch
-tornado
-tqdm
-transformers
-typing-inspect
-typing_extensions
-tzdata
-urllib3
-watchdog
-yarl
+PyPDF2
+langchain.text_splitter
+langchain.embeddings.huggingface
+langchain.vectorstores
+langchain.chains.question_answering
+langchain
+docx
+os
+langchain.chains
+langchain.memory
+langchain_core.callbacks
+streamlit_chat
