--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # core
-langchain==0.1.14
-langchain-community==0.0.21
+langchain
+langchain-community
 python-dotenv
 streamlit
 
@@ -16,5 +16,3 @@ torch
 # huggingface hub
 huggingface_hub
 
-# chat UI (GitHub에서 설치)
-git+https://github.com/AI-Yash/st-chat.git
