--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ streamlit
 PyPDF2
 huggingface_hub
 transformers
-streamlit-chat @ git+https://github.com/AI-Yash/st-chat.git
+git+https://github.com/AI-Yash/st-chat.git
